--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
       "email": "phyozawtun91@gmail.com"
     }
   ],
-  "require": {},
-  "minimum-stability": "dev",
   "autoload": {
     "psr-0": {
       "substr_mm": "src/"
     }
-  }
+  },
+  "require": {},
+  "minimum-stability": "dev"
 }
