Update Name Space

--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
       "email": "phyozawtun91@gmail.com"
     }
   ],
+  "minimum-stability": "dev",
+  "require": {
+    "php": ">=5.0.0"
+  },
   "autoload": {
     "psr-0": {
       "substr_mm": "src/"
     }
-  },
-  "require": {},
-  "minimum-stability": "dev"
+  }
 }
